--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Setup Hexo env
         env:
-          ACTION_DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+          ACTION_DEPLOY_KEY: ${{ secrets.GH_DEPLOY_KEY }}
         run: |
           # set up private key for deploy
           mkdir -p ~/.ssh/
